spacing fix for socials

--- a/src/components/atoms/socials/socials.scss
+++ b/src/components/atoms/socials/socials.scss
@@ -17,6 +17,10 @@
 
     display: inline-block;
   }
+
+  @media only all and (min-width: settings.$breakpoint-medium) {
+    margin: 0 auto;
+  }
 }
 
 .email {
